--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ logs
 
 *.svg
 *.map
+
+frontend/src/main/resources/.sass-cache
+frontend/src/main/resources/index.css
+frontend/src/main/resources/index.css.map
