web socket impl in game menu room

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -21,6 +21,7 @@ play.http.secret.key = ${?APPLICATION_SECRET}
 play.evolutions.autoApply = true
 
 play.modules.enabled += "tasks.TasksModule"
+play.modules.enabled += "modules.ActorModule"
 
 
 ## CSRF Filter
