--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -2,20 +2,12 @@
 
 include "dev.conf"
 include "bff.conf"
+include "databases.conf"
 
 debug = true
 
 apiPrefix = api
 
-# Default database configuration using Postgres database engine
-slick.dbs.default {
-  db = {
-    url = ${?JDBC_DATABASE_URL}
-    driver = "org.postgresql.Driver"
-  }
-  profile = "slick.jdbc.PostgresProfile$"
-  numThreads = 1
-}
 
 play.http.secret.key = ${?APPLICATION_SECRET}
 
