tests using asset loader

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ logs
 frontend/src/main/resources/.sass-cache
 frontend/src/main/resources/index.css
 frontend/src/main/resources/index.css.map
+frontend/src/main/resources/assets/in-game/*
