instructions to run server locally

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -51,7 +51,7 @@ hikaricp {
 
 
 superUser {
-  name = sherpal
-  mail = "antoine.doeraene@gmail.com"
+  name = ${?ADMIN_USERNAME}
+  mail = ${?ADMIN_MAIL}
   password = ${?ADMIN_PASSWORD}  # environment variable that should not be committed to git...
 }
