better multiplayer dev experience

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ frontend/src/main/resources/.sass-cache
 frontend/src/main/resources/index.css
 frontend/src/main/resources/index.css.map
 frontend/src/main/resources/assets/in-game/*
+frontend/src/main/resources/assets.zip
