--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ logs
 *.map
 
 frontend/src/main/resources/.sass-cache
-frontend/src/main/resources/index.css
+#frontend/src/main/resources/index.css
 frontend/src/main/resources/index.css.map
 frontend/src/main/resources/assets/in-game/*
 frontend/src/main/resources/assets.zip
