--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,7 +2,7 @@ version=2.0.0
 style = default
 danglingParentheses = true
 align {
-  tokens.add = ["=", "<-"]
+  tokens.add = ["=", "<-", "<--"]
 }
 maxColumn = 120
 rewrite.rules = [SortImports, RedundantBraces, RedundantParens, PreferCurlyFors]
