--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/canvas-confetti": "^1.3.0",
     "@types/marked": "^1.2.1",
     "@types/react": "^17.0.0",
     "@types/react-color": "^3.0.4",
@@ -14,6 +15,7 @@
     "@pixi/settings": "^5.2.1",
     "@pixi/utils": "^5.2.1",
     "@popperjs/core": "^2.6.0",
+    "canvas-confetti": "^1.3.2",
     "marked": "^1.2.7",
     "pixi-filters": "^3.2.0",
     "pixi.js": "^5.2.1",
