too big commit as wip for good ais

--- a/game-server/src/main/resources/application.conf
+++ b/game-server/src/main/resources/application.conf
@@ -2,4 +2,9 @@
 include "dev.conf"
 include "databases.conf"
 
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+}
 
