🔨 Prod build now works
Run `sbt packageApplication` to package the server+frontend part of the app.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ frontend/scala-metadata.js
 game-server-launcher/node_modules
 game-server-launcher/build
 
+server/src/main/resources/
+
 .bloop
 .metals
 project/metals.sbt
